# memorizz

./: .gitignore  README.md  pyproject.toml  test.ipynb
src/memorizz/: __init__.py
src/memorizz/database/: __init__.py
src/memorizz/database/mongodb/: __init__.py  mongodb_tools.py
